fix(tag): fix missing color (#399)
This change fixes missing color variant supports in `<bx-filter-tag>`.

--- a/src/components/tag/tag.scss
+++ b/src/components/tag/tag.scss
@@ -1,5 +1,5 @@
 //
-// Copyright IBM Corp. 2019
+// Copyright IBM Corp. 2019, 2020
 //
 // This source code is licensed under the Apache-2.0 license found in the
 // LICENSE file in the root directory of this source tree.
@@ -13,43 +13,53 @@ $css--plex: true !default;
   @extend .#{$prefix}--tag;
 }
 
-:host(#{$prefix}-tag[type='red']) {
+:host(#{$prefix}-tag[type='red']),
+:host(#{$prefix}-filter-tag[type='red']) {
   @extend .#{$prefix}--tag--red;
 }
 
-:host(#{$prefix}-tag[type='magenta']) {
+:host(#{$prefix}-tag[type='magenta']),
+:host(#{$prefix}-filter-tag[type='magenta']) {
   @extend .#{$prefix}--tag--magenta;
 }
 
-:host(#{$prefix}-tag[type='purple']) {
+:host(#{$prefix}-tag[type='purple']),
+:host(#{$prefix}-filter-tag[type='purple']) {
   @extend .#{$prefix}--tag--purple;
 }
 
-:host(#{$prefix}-tag[type='blue']) {
+:host(#{$prefix}-tag[type='blue']),
+:host(#{$prefix}-filter-tag[type='blue']) {
   @extend .#{$prefix}--tag--blue;
 }
 
-:host(#{$prefix}-tag[type='cyan']) {
+:host(#{$prefix}-tag[type='cyan']),
+:host(#{$prefix}-filter-tag[type='cyan']) {
   @extend .#{$prefix}--tag--cyan;
 }
 
-:host(#{$prefix}-tag[type='teal']) {
+:host(#{$prefix}-tag[type='teal']),
+:host(#{$prefix}-filter-tag[type='teal']) {
   @extend .#{$prefix}--tag--teal;
 }
 
-:host(#{$prefix}-tag[type='green']) {
+:host(#{$prefix}-tag[type='green']),
+:host(#{$prefix}-filter-tag[type='green']) {
   @extend .#{$prefix}--tag--green;
 }
 
-:host(#{$prefix}-tag[type='gray']) {
+:host(#{$prefix}-tag[type='gray']),
+:host(#{$prefix}-filter-tag[type='gray']) {
   @extend .#{$prefix}--tag--gray;
 }
 
-:host(#{$prefix}-tag[type='cool-gray']) {
+:host(#{$prefix}-tag[type='cool-gray']),
+:host(#{$prefix}-filter-tag[type='cool-gray']) {
   @extend .#{$prefix}--tag--cool-gray;
 }
 
-:host(#{$prefix}-tag[type='warm-gray']) {
+:host(#{$prefix}-tag[type='warm-gray']),
+:host(#{$prefix}-filter-tag[type='warm-gray']) {
   @extend .#{$prefix}--tag--warm-gray;
 }
 
